--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
             "dom",
             "es2015"
         ],
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        // jsonファイル読み込み時追加
+        "resolveJsonModule": true
     }
 }
